Account info disabled by default to prevent flickering

--- a/styles/profile-page.scss
+++ b/styles/profile-page.scss
@@ -60,7 +60,7 @@ main {
     }
 
     .account-info-container {
-      opacity: 0.5;
+      opacity: 0.3;
     }
 
     form button {
